--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
     <li>Place bread in frying pan and fry</li>
     <li>Place bread in frying pan and fry</li>
     <li>Add cheese on top of bread</li>
-    <li>Spread butter on bread and frying pan</li>
+    <li>Cover with second slice of bread</li>
+    <li></li>
   </ol>
 
 </body>
